# agent-teams

./: .gitignore  README.md  TEST_REPORT.md  pyproject.toml
scripts/: agent-wrapper.sh
src/agent_teams/: __init__.py  cli.py  core.py
src/agent_teams.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_core.py
