[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-teams-cli"
version = "0.1.1"
description = "File-based agent team coordination for OpenClaw"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Marcus"}]
dependencies = []

[project.scripts]
agent-teams = "agent_teams.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
